--- a/Practice.ipynb
+++ b/Practice.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNLv/931++/CYdnTOfl06vA",
+      "authorship_tag": "ABX9TyPQr+b7o2fSIctnTMq/Z+mI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +33,9 @@
         "id": "vCy_G9hEysqh"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "import numpy as np"
+      ]
     }
   ]
 }
